# resume-metadata-enricher

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  __main__.py  docker-compose.yml  metadata.example.yml  pyproject.toml  requirements.txt  technologies.example.yml
.terminalizer/: resume-metadata-enricher.yml
resume-metadata-enricher/: __main__.py
